# 5G-Registration-Attack

./: .gitignore  README.md  fifteenjun.pcap  find_time_diff.py  plotgraph.py
cn-configs/: README.md
cn-configs/docker_open5gs/: .env  ansible.cfg  kill_all_srv.sh  run_all_srv.sh  sa-deploy.yaml  setup_multi_gnbs.sh  setup_multi_ues.sh
cn-configs/docker_open5gs/amf/: amf.yaml
cn-configs/docker_open5gs/ausf/: ausf.yaml
cn-configs/docker_open5gs/base/: open5gs_init.sh
cn-configs/docker_open5gs/bsf/: bsf.yaml
cn-configs/docker_open5gs/inventory/: hosts
cn-configs/docker_open5gs/metrics/: prometheus.yml
cn-configs/docker_open5gs/multi-gnb/: nr-gnb-template.yaml  ueransim-gnb_init-template.sh  ueransim_image_init.sh
cn-configs/docker_open5gs/multi-ue/: nr-ue-template.yaml  ueransim-ue-template.yaml  ueransim-ue_init-template.sh  ueransim_image_init.sh
cn-configs/docker_open5gs/nrf/: nrf.yaml
cn-configs/docker_open5gs/nssf/: nssf.yaml
cn-configs/docker_open5gs/pcf/: pcf.yaml
cn-configs/docker_open5gs/playbooks/: 25-ues.yaml
cn-configs/docker_open5gs/py_3.12.3/: pyvenv.cfg
cn-configs/docker_open5gs/scp/: scp.yaml
cn-configs/docker_open5gs/scripts/: add_users.sh  collect_logs.sh  collect_stats.sh  del_users.sh  open5gs-dbctl  reg_multi_ues.sh
cn-configs/docker_open5gs/smf/: smf.yaml  smf_4g.yaml
cn-configs/docker_open5gs/udm/: udm.yaml
cn-configs/docker_open5gs/udr/: udr.yaml
cn-configs/docker_open5gs/ueransim/: ueransim_image_init.sh
cn-configs/free5gc-compose/: docker-compose-build.yaml  docker-compose-ulcl-build.yaml  docker-compose-ulcl.yaml  docker-compose.yaml
cn-configs/free5gc-compose/cert/: af_01639276-db91-42b1-83f6-4b666f170db4.pem  af_01b7b360-3ca7-4a3b-9b29-9b9151ed160b.pem  af_020f925d-50d1-482a-a0d2-b85d3f629553.pem  af_02337252-e88d-4d10-9e28-2f54ed5562c0.pem  af_0254bbfe-96e6-41fa-8b82-fd816f842e81.pem  af_02f861f1-a59a-4957-82a6-8763afa15bb7.pem  af_03c596ae-6fc4-4e42-920e-69571e1192a0.pem  af_03e2a3ca-6242-4249-9292-ebe8ba098057.pem  af_03ea805a-6787-4036-866e-d34c88b7070d.pem  af_0564dd48-c506-441e-8d86-05600c89ddce.pem  af_06362841-c52b-4645-b8e4-8c0db6d7c5c4.pem  af_06717b3a-e29d-48a5-bfc2-04c38d607b7b.pem  af_06d3e3a0-a36e-4470-86d6-ae7ae9da52f6.pem  af_0795358e-c0a8-48c5-8252-a438fdc9218c.pem  af_0867f34f-0be6-400c-a24e-5f80dfccc10b.pem  af_0890eb2b-87d2-4cb1-9a20-e5c5f3f69f2f.pem  af_08fee335-f0d4-4be2-bc76-79c97878c35f.pem  af_0bab975c-cc7d-4972-9750-de450f436a70.pem  af_0bf33080-0edf-4cac-87b2-e7034cb03433.pem  af_0bf54556-eb84-4bd8-a222-b0ba70828e30.pem  af_0dfc2286-2e41-4793-b914-9b4c35e1d134.pem  af_0e011e36-fffd-4d74-88f9-6dbdd6811d2e.pem  af_0e74294e-0c6c-440c-a874-e164aa0cfb6c.pem  af_0e75a804-3c08-4075-aef7-fa8cce17c418.pem  af_0eb2bb12-2cf1-4ded-b9ec-a92819d4c831.pem  af_0f8916e6-726c-4063-851e-df4f5816577f.pem  af_0fafd066-02ed-4895-bef5-e00be67699c7.pem  af_1015063d-867a-4716-a559-207a3c6d9ec4.pem  af_1031ead9-da04-466b-8ee4-690e50e8649f.pem  af_107f0757-f662-446e-abff-5de35a14a097.pem  af_10c98c81-383f-4c65-bc84-09a87b566eb2.pem  af_1128b53d-fa92-4727-90f6-dd470de75ee6.pem  af_11453441-b774-4bc1-b1e5-4d3c3195fc86.pem  af_1171a92c-cb16-480e-b934-df8af87fe490.pem  af_119a44c7-489f-4db4-b8bf-3c86aced0109.pem  af_11a339d2-4893-4638-b6b6-92cabcc10b1a.pem  af_124a3c78-11ac-4d7d-a266-2de9ea7e6181.pem  af_12601b04-dcc6-4ecf-8ba7-4f3152cc4f6b.pem  af_138e2877-0d6f-4c84-9e93-8e820fc95183.pem  af_1477151c-6642-429c-beb3-62a00542a8c2.pem  (+3156 more)
cn-configs/free5gc-compose/config/: amfcfg.yaml  ausfcfg.yaml  chfcfg.yaml  gnbcfg.yaml  n3iwfcfg.yaml  nefcfg.yaml  nrfcfg.yaml  nssfcfg.yaml  pcfcfg.yaml  smfcfg.yaml  tngfcfg.yaml  udmcfg.yaml  udrcfg.yaml  uecfg-ulcl.yaml  uecfg.yaml  uerouting.yaml  upfcfg.yaml  webuicfg.yaml
cn-configs/oai-cn5g-fed/component/oai-smf/src/common/utils/: CMakeLists.txt  async_shell_cmd.cpp  conversions.h  fqdn.hpp  mime_parser.cpp  mime_parser.hpp  smf_3gpp_conversions.cpp  smf_3gpp_conversions.hpp
cn-configs/oai-cn5g-fed/component/oai-smf/src/nas/: CMakeLists.txt
cn-configs/oai-cn5g-fed/component/oai-smf/src/smf_app/: CMakeLists.txt  session_handler.cpp  session_handler.hpp  smf_app.cpp  smf_app.hpp  smf_config.cpp  smf_config.hpp  smf_config_types.cpp  smf_config_types.hpp  smf_context.cpp  smf_context.hpp  smf_event.cpp  smf_event.hpp  smf_event_sig.hpp  smf_msg.cpp  smf_msg.hpp  smf_n1.cpp  smf_n1.hpp  smf_n2.cpp  smf_n2.hpp  smf_n4.cpp  smf_n4.hpp  smf_n7.cpp  smf_n7.hpp  smf_paa_dynamic.hpp  smf_pco.cpp  smf_pco.hpp  smf_pfcp_association.cpp  smf_pfcp_association.hpp  smf_procedure.cpp  smf_procedure.hpp  smf_profile.cpp  smf_profile.hpp  smf_qos_upf_edge.cpp  smf_qos_upf_edge.hpp  smf_sbi.cpp  smf_sbi.hpp  smf_subscription.cpp  smf_subscription.hpp
cn-configs/oai-cn5g-fed/component/oai-upf/src/upf_app/framed_routing/: CMakeLists.txt
cn-configs/oai-cn5g-fed/docker-compose/: .env  docker-compose.yaml  kill_all_srv.sh  run_all_srv.sh
custom-packet-scripts/: README.md  requirements.txt
custom-packet-scripts/decoders/: README.md  decode_nas.py  decode_ngap.py  decode_rrc.py  decode_sctp.py
custom-packet-scripts/packets/: README.md  send_ng_setup_req.py  send_reg_nas.py  send_rrc_msg.py
custom-packet-scripts/procedures/: README.md  trigger_auth.py
custom-packet-scripts/servers/: README.md  test_amf.py
using-oai-ueransim/: Attack.sh  benign.sh  read me.docx
using-open5gs-packetrusher-ueransim/: README.md  Vagrantfile  run_as.py  run_as.sh  run_ue_box2_config.sh
using-open5gs-packetrusher-ueransim/as_metrics_1/: docker-compose.yaml  prometheus.yml
using-open5gs-packetrusher-ueransim/shared/: reg_rusherbox1.sh  reg_rusherbox2.sh  rusher_box1_config.sh  rusher_box2_config.sh  ue_box1.sh  ue_box1_config.sh  unreg_rusherbox1.sh  unreg_rusherbox2.sh
using-open5gs-packetrusher-ueransim/shared/packetrusher/: config0.yml  config1.yml  config2.yml  config3.yml  config4.yml  config5.yml
using-open5gs-packetrusher-ueransim/shared/ueransim/: gnb1.yaml  gnb130.yaml  gnb2.yaml  gnb3.yaml  gnb4.yaml  gnb5.yaml  ue0.yaml  ue1.yaml  ue2.yaml  ue3.yaml  ue4.yaml  ue5.yaml
(+517 files in other folders)
